[package]
name = "dentist_store"
version = "0.1.0"
authors = ["_as"]
edition = "2018"

[dependencies]
mqtt4bytes = "0.3.0"
rumqttc = "0.2.0"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
store-utils = { path = "external/rust-store-utils" }
lazy_static = "1.4.0"
paste = "1.0.3"
regex = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
reqwest = { version = "0.10", features = ["json"] }
