[package]
name = "store-utils"
version = "0.1.0"
authors = ["_as"]
edition = "2018"


[dependencies]
regex = "1"
tokio = { version = "0.2", features = ["full"] }
sqlx = { version = "0.4.*", default-features = false, features = [ "runtime-tokio-rustls", "sqlite", "macros" ] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
rumqttc = "0.2.0"
chrono = "0.4"
