[package]
name = "user_store"
version = "0.1.0"
authors = ["_as"]
edition = "2018"

[features]

reg_captcha = ["reqwest"]
mail_check = ["lettre", "rand", "once_cell"]

[dependencies]
rumqttc = "0.2.0"
tokio = { version = "0.2", features = ["full"] }
sqlx = { version = "0.4.*", default-features = false, features = [ "runtime-tokio-rustls", "sqlite", "macros" ] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.*"
store-utils = { path = "external/rust-store-utils" }
lazy_static = "1.4.0"
paste = "1.0.3"
regex = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }

lettre = { version = "0.10.0-alpha.4", optional = true }
once_cell = { version = "", optional = true }
rand = { version = "0.7.3", optional = true }
reqwest = { version = "0.10", features = ["json"], optional = true }
