name:                bounce
synopsis:            Module renaming to avoid clashes
description:
  Module renaming to avoid clashes
version:             0.0.0.1
license:             Apache-2.0
author:              ItJustWorksTM
category:            Network, IoT
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:          -Wall -fno-warn-orphans
  exposed-modules:
    LocallyBounced.Network.MQTT.Client
  build-depends:
    base,
    net-mqtt
  hs-source-dirs:     src
  default-language: Haskell2010
